# realworld

./: .env.example  Cargo.toml  README.md  diesel.toml
migrations/2024-08-24-124038_create_users/: up.sql
migrations/2024-08-24-124743_create_articles/: up.sql
migrations/2024-08-24-125343_create_tags/: up.sql
migrations/2024-08-24-125807_create_comments/: up.sql
migrations/2024-08-24-130033_create_favorites/: down.sql
src/: constants.rs  error.rs  main.rs  schema.rs
src/app/drivers/: routes.rs
src/app/drivers/middlewares/: auth.rs  state.rs
src/app/features/: mod.rs
src/app/features/article/: controllers.rs  entities.rs  presenters.rs  repositories.rs  requests.rs  usecases.rs
src/app/features/comment/: controllers.rs  entities.rs  presenters.rs  repositories.rs  usecases.rs
src/app/features/favorite/: controllers.rs  entities.rs  mod.rs  presentres.rs  repository.rs  usecases.rs
src/app/features/follow/: entities.rs
src/app/features/profile/: controllers.rs  entities.rs  presenters.rs  repositories.rs  usecases.rs
src/app/features/tag/: controllers.rs  entities.rs  mod.rs  presenters.rs  repositories.rs  usecases.rs
src/app/features/user/: controllers.rs  entities.rs  mod.rs  presenters.rs  repositories.rs  requests.rs  usercases.rs
src/utils/: db.rs  di.rs  hasher.rs  mod.rs  token.rs
