[package]
name = "realworld"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3" }
diesel = { version = "2.1.0", features = [
  "r2d2",
  "postgres",
  "chrono",
  "uuid",
  "serde_json",
] }
dotenv = { version = "0.15" }
# A lightweight logging facade for Rust
log = { version = "0.4.17" }

# A logging implementation for `log` which is configured via an environment variable.
env_logger = { version = "0.10.0" }

# A generic serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }

# A JSON serialization file format
serde_json = { version = "1.0" }

# Date and time library for Rust
chrono = { version = "0.4", features = ["serde"] }

# derive(Error)
thiserror = { version = "1.0" }

# A library to generate and parse UUIDs.
# Compatible version is here: https://github.com/diesel-rs/diesel/blob/master/diesel/Cargo.toml#L26
# uuid = { version = "0.8", features = ["serde", "v4"] }
[dependencies.uuid]
version = "1.3.3"
features = ["serde", "v4"]


